--- a/data_cleaning.ipynb
+++ b/data_cleaning.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -42,17 +42,8 @@
      "text": [
       "Warning message:\n",
       "\"unable to access index for repository http://www.stats.ox.ac.uk/pub/RWin/bin/windows/contrib/3.5:\n",
-      "  URL 'http://www.stats.ox.ac.uk/pub/RWin/bin/windows/contrib/3.5/PACKAGES'를 열 수 없습니다\""
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "package 'foreign' successfully unpacked and MD5 sums checked\n",
-      "\n",
-      "The downloaded binary packages are in\n",
-      "\tC:\\Users\\eunee\\AppData\\Local\\Temp\\RtmpUbxHD0\\downloaded_packages\n"
+      "  URL 'http://www.stats.ox.ac.uk/pub/RWin/bin/windows/contrib/3.5/PACKAGES'를 열 수 없습니다\"Warning message:\n",
+      "\"package 'foreign' is in use and will not be installed\""
      ]
     }
    ],
@@ -70,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -111,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -250,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -259,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -271,6 +262,167 @@
    "metadata": {},
    "source": [
     "소득에 따른 의료 접근성(치료받지 못함)을 분석하기 위함이므로, 비해당(치료가 필요하지 않음) 응답의 경우 연구 관심 밖이다. 이들은 이후 ```NA```로 처리한다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "      SEX             AGE           MARTIAL         RINCOME     \n",
+       " Min.   :1.000   Min.   :18.00   Min.   :1.000   Min.   :-8.00  \n",
+       " 1st Qu.:1.000   1st Qu.:34.00   1st Qu.:1.000   1st Qu.:-1.00  \n",
+       " Median :2.000   Median :44.00   Median :1.000   Median : 2.00  \n",
+       " Mean   :1.551   Mean   :45.98   Mean   :1.527   Mean   : 2.93  \n",
+       " 3rd Qu.:2.000   3rd Qu.:57.00   3rd Qu.:2.000   3rd Qu.: 6.00  \n",
+       " Max.   :2.000   Max.   :94.00   Max.   :3.000   Max.   :21.00  \n",
+       "    RXTINCM           TRTWHY1          TRTWHY2          TRTWHY3      \n",
+       " Min.   :-8.0000   Min.   :-1.000   Min.   :-1.000   Min.   :-1.000  \n",
+       " 1st Qu.:-1.0000   1st Qu.: 1.500   1st Qu.: 1.000   1st Qu.: 1.000  \n",
+       " Median : 0.0000   Median : 2.000   Median : 2.000   Median : 2.000  \n",
+       " Mean   :-0.2977   Mean   : 1.351   Mean   : 1.221   Mean   : 1.337  \n",
+       " 3rd Qu.: 0.0000   3rd Qu.: 2.000   3rd Qu.: 2.000   3rd Qu.: 2.000  \n",
+       " Max.   :11.0000   Max.   : 2.000   Max.   : 2.000   Max.   : 2.000  \n",
+       "    TRTWHY4      \n",
+       " Min.   :-1.000  \n",
+       " 1st Qu.: 1.000  \n",
+       " Median : 2.000  \n",
+       " Mean   : 1.316  \n",
+       " 3rd Qu.: 2.000  \n",
+       " Max.   : 2.000  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "summary(kor)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "응답에서 '모르겠다/무응답', '비해당'을 ```ifelse```문을 이용해 ```NA```처리한다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "kor$RINCOME <- ifelse(kor$RINCOME==-8, NA, kor$RINCOME)\n",
+    "kor$RINCOME <- ifelse(kor$RINCOME==-1, NA, kor$RINCOME)\n",
+    "\n",
+    "kor$RXTINCM <- ifelse(kor$RXTINCM==-8, NA, kor$RXTINCM)\n",
+    "kor$RXTINCM <- ifelse(kor$RXTINCM==-1, NA, kor$RXTINCM)\n",
+    "\n",
+    "kor$TRTWHY1 <- ifelse(kor$TRTWHY1==-1, NA, kor$TRTWHY1)\n",
+    "kor$TRTWHY2 <- ifelse(kor$TRTWHY2==-1, NA, kor$TRTWHY2)\n",
+    "kor$TRTWHY3 <- ifelse(kor$TRTWHY3==-1, NA, kor$TRTWHY3)\n",
+    "kor$TRTWHY4 <- ifelse(kor$TRTWHY4==-1, NA, kor$TRTWHY4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "      SEX             AGE           MARTIAL         RINCOME      \n",
+       " Min.   :1.000   Min.   :18.00   Min.   :1.000   Min.   : 0.000  \n",
+       " 1st Qu.:1.000   1st Qu.:34.00   1st Qu.:1.000   1st Qu.: 3.000  \n",
+       " Median :2.000   Median :44.00   Median :1.000   Median : 5.000  \n",
+       " Mean   :1.551   Mean   :45.98   Mean   :1.527   Mean   : 5.944  \n",
+       " 3rd Qu.:2.000   3rd Qu.:57.00   3rd Qu.:2.000   3rd Qu.: 7.000  \n",
+       " Max.   :2.000   Max.   :94.00   Max.   :3.000   Max.   :21.000  \n",
+       "                                                 NA's   :643     \n",
+       "    RXTINCM           TRTWHY1         TRTWHY2         TRTWHY3     \n",
+       " Min.   : 0.0000   Min.   :1.000   Min.   :1.000   Min.   :1.000  \n",
+       " 1st Qu.: 0.0000   1st Qu.:2.000   1st Qu.:2.000   1st Qu.:2.000  \n",
+       " Median : 0.0000   Median :2.000   Median :2.000   Median :2.000  \n",
+       " Mean   : 0.3921   Mean   :1.937   Mean   :1.775   Mean   :1.919  \n",
+       " 3rd Qu.: 0.0000   3rd Qu.:2.000   3rd Qu.:2.000   3rd Qu.:2.000  \n",
+       " Max.   :11.0000   Max.   :2.000   Max.   :2.000   Max.   :2.000  \n",
+       " NA's   :645       NA's   :306     NA's   :306     NA's   :306    \n",
+       "    TRTWHY4     \n",
+       " Min.   :1.000  \n",
+       " 1st Qu.:2.000  \n",
+       " Median :2.000  \n",
+       " Mean   :1.893  \n",
+       " 3rd Qu.:2.000  \n",
+       " Max.   :2.000  \n",
+       " NA's   :306    "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "summary(kor)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "이제 ```NA```를 제거한다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "kor <- kor[complete.cases(kor), ]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "      SEX            AGE           MARTIAL         RINCOME      \n",
+       " Min.   :1.00   Min.   :19.00   Min.   :1.000   Min.   : 0.000  \n",
+       " 1st Qu.:1.00   1st Qu.:36.00   1st Qu.:1.000   1st Qu.: 3.000  \n",
+       " Median :1.00   Median :44.00   Median :1.000   Median : 5.000  \n",
+       " Mean   :1.45   Mean   :45.09   Mean   :1.376   Mean   : 5.985  \n",
+       " 3rd Qu.:2.00   3rd Qu.:52.50   3rd Qu.:1.000   3rd Qu.: 7.000  \n",
+       " Max.   :2.00   Max.   :81.00   Max.   :3.000   Max.   :21.000  \n",
+       "    RXTINCM           TRTWHY1         TRTWHY2         TRTWHY3     \n",
+       " Min.   : 0.0000   Min.   :1.000   Min.   :1.000   Min.   :1.000  \n",
+       " 1st Qu.: 0.0000   1st Qu.:2.000   1st Qu.:1.000   1st Qu.:2.000  \n",
+       " Median : 0.0000   Median :2.000   Median :2.000   Median :2.000  \n",
+       " Mean   : 0.4054   Mean   :1.967   Mean   :1.699   Mean   :1.923  \n",
+       " 3rd Qu.: 0.0000   3rd Qu.:2.000   3rd Qu.:2.000   3rd Qu.:2.000  \n",
+       " Max.   :11.0000   Max.   :2.000   Max.   :2.000   Max.   :2.000  \n",
+       "    TRTWHY4     \n",
+       " Min.   :1.000  \n",
+       " 1st Qu.:2.000  \n",
+       " Median :2.000  \n",
+       " Mean   :1.879  \n",
+       " 3rd Qu.:2.000  \n",
+       " Max.   :2.000  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "summary(kor)"
    ]
   },
   {
@@ -311,8 +463,7 @@
     "    - ```9``` : 400만원 ~ 449만원\n",
     "    - ```10``` : 450만원 ~ 499만원\n",
     "    - ```11``` : 500만원 이상\n",
-    "    - ```-8``` : 모르겠다/무응답\n",
-    "    - ```-1``` : 비해당\n",
+    "\n",
     "    \n",
     "    \n",
     "- ```RXTINCM``` : 월 평균 근로외 소득 (세전)\n",
@@ -328,69 +479,25 @@
     "    - ```9``` : 400만원 ~ 449만원\n",
     "    - ```10``` : 450만원 ~ 499만원\n",
     "    - ```11``` : 500만원 이상\n",
-    "    - ```-8``` : 모르겠다/무응답\n",
-    "    - ```-1``` : 비해당\n",
+    "\n",
     "    \n",
     "    \n",
     "- 치료 못 받았던 경험  \n",
     "    ```TRTWHY1``` : 비용을 지불할 능력이 없어서\n",
     "    - ```1``` : 있었다\n",
     "    - ```2``` : 없었다\n",
-    "    - ```-1``` : 비해당\n",
     "    \n",
     " ```TRTWHY2``` : 직장을 빠지고 갈 시간이 없거나 다른 일로 바빠서  \n",
     "    - ```1``` : 있었다\n",
     "    - ```2``` : 없었다\n",
-    "    - ```-1``` : 비해당\n",
     "\n",
     " ```TRTWHY3``` : 거주하는 동네나 인근에서는 필요한 치료를 받을 수 없어서   \n",
     "    - ```1``` : 있었다\n",
     "    - ```2``` : 없었다\n",
-    "    - ```-1``` : 비해당\n",
     "  \n",
     " ```TRTWHY4``` : 치료를 기다리는 사람들이 너무 많아서   \n",
     "    - ```1``` : 있었다\n",
-    "    - ```2``` : 없었다\n",
-    "    - ```-1``` : 비해당"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "      SEX             AGE           MARTIAL         RINCOME     \n",
-       " Min.   :1.000   Min.   :18.00   Min.   :1.000   Min.   :-8.00  \n",
-       " 1st Qu.:1.000   1st Qu.:34.00   1st Qu.:1.000   1st Qu.:-1.00  \n",
-       " Median :2.000   Median :44.00   Median :1.000   Median : 2.00  \n",
-       " Mean   :1.551   Mean   :45.98   Mean   :1.527   Mean   : 2.93  \n",
-       " 3rd Qu.:2.000   3rd Qu.:57.00   3rd Qu.:2.000   3rd Qu.: 6.00  \n",
-       " Max.   :2.000   Max.   :94.00   Max.   :3.000   Max.   :21.00  \n",
-       "    RXTINCM           TRTWHY1          TRTWHY2          TRTWHY3      \n",
-       " Min.   :-8.0000   Min.   :-1.000   Min.   :-1.000   Min.   :-1.000  \n",
-       " 1st Qu.:-1.0000   1st Qu.: 1.500   1st Qu.: 1.000   1st Qu.: 1.000  \n",
-       " Median : 0.0000   Median : 2.000   Median : 2.000   Median : 2.000  \n",
-       " Mean   :-0.2977   Mean   : 1.351   Mean   : 1.221   Mean   : 1.337  \n",
-       " 3rd Qu.: 0.0000   3rd Qu.: 2.000   3rd Qu.: 2.000   3rd Qu.: 2.000  \n",
-       " Max.   :11.0000   Max.   : 2.000   Max.   : 2.000   Max.   : 2.000  \n",
-       "    TRTWHY4      \n",
-       " Min.   :-1.000  \n",
-       " 1st Qu.: 1.000  \n",
-       " Median : 2.000  \n",
-       " Mean   : 1.316  \n",
-       " 3rd Qu.: 2.000  \n",
-       " Max.   : 2.000  "
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "summary(kor)"
+    "    - ```2``` : 없었다"
    ]
   },
   {
@@ -459,7 +566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -475,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -486,24 +593,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "```TRTWHY1```~```TRTWHY4```의 응답에서 '비해당' 응답에 ```8```을 부여했는데, 한국과의 통일성을 위해 비해당의 경우 ```-1```을 부여한다."
+    "'비해당' 응답은 ```NA```로 처리한다."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
-    "fin$k38a <- ifelse(fin$K38A == 8, -1, fin$K38A)\n",
-    "fin$k38b <- ifelse(fin$K38B == 8, -1, fin$K38B)\n",
-    "fin$k38c <- ifelse(fin$K38C == 8, -1, fin$K38C)\n",
-    "fin$k38d <- ifelse(fin$K38D == 8, -1, fin$K38D)"
+    "fin$k38a <- ifelse(fin$K38A == 8, NA, fin$K38A)\n",
+    "fin$k38b <- ifelse(fin$K38B == 8, NA, fin$K38B)\n",
+    "fin$k38c <- ifelse(fin$K38C == 8, NA, fin$K38C)\n",
+    "fin$k38d <- ifelse(fin$K38D == 8, NA, fin$K38D)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -512,11 +619,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
     "names(fin) <- c(\"SEX\", \"AGE\", \"MARTIAL\", \"INCOME\", \"TRTWHY1\", \"TRTWHY2\", \"TRTWHY3\", \"TRTWHY4\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```NA```를 제거한다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fin <- fin[complete.cases(fin), ]"
    ]
   },
   {
@@ -541,7 +664,7 @@
     "- ```MARTIAL``` : 동거\n",
     "    - ```1``` : 동거\n",
     "    - ```2``` : 비동거\n",
-    "    - ```3``` : 해당 없음\n",
+    "    - ```3``` : 해당 없음(미혼)\n",
     "    \n",
     "    \n",
     "- ```INCOME``` : 월 평균 총 소득 (세전, 근로외 소득 포함)\n",
@@ -551,27 +674,23 @@
     "    ```TRTWHY1``` : 비용을 지불할 능력이 없어서\n",
     "    - ```1``` : 있었다\n",
     "    - ```2``` : 없었다\n",
-    "    - ```8``` : 비해당\n",
     "    \n",
     " ```TRTWHY2``` : 직장을 빠지고 갈 시간이 없거나 다른 일로 바빠서  \n",
     "    - ```1``` : 있었다\n",
     "    - ```2``` : 없었다\n",
-    "    - ```8``` : 비해당\n",
     "\n",
     " ```TRTWHY3``` : 거주하는 동네나 인근에서는 필요한 치료를 받을 수 없어서   \n",
     "    - ```1``` : 있었다\n",
     "    - ```2``` : 없었다\n",
-    "    - ```8``` : 비해당\n",
     "  \n",
     " ```TRTWHY4``` : 치료를 기다리는 사람들이 너무 많아서   \n",
     "    - ```1``` : 있었다\n",
-    "    - ```2``` : 없었다\n",
-    "    - ```8``` : 비해당"
+    "    - ```2``` : 없었다"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -579,20 +698,18 @@
       "text/plain": [
        "      SEX             AGE          MARTIAL          INCOME      \n",
        " Min.   :1.000   Min.   :1936   Min.   :1.000   Min.   :    10  \n",
-       " 1st Qu.:1.000   1st Qu.:1950   1st Qu.:1.000   1st Qu.:  3000  \n",
+       " 1st Qu.:1.000   1st Qu.:1951   1st Qu.:1.000   1st Qu.:  3000  \n",
        " Median :2.000   Median :1963   Median :1.000   Median :  4500  \n",
-       " Mean   :1.551   Mean   :1965   Mean   :1.669   Mean   :  5816  \n",
-       " 3rd Qu.:2.000   3rd Qu.:1979   3rd Qu.:3.000   3rd Qu.:  6100  \n",
+       " Mean   :1.533   Mean   :1964   Mean   :1.238   Mean   :  5902  \n",
+       " 3rd Qu.:2.000   3rd Qu.:1976   3rd Qu.:1.000   3rd Qu.:  6000  \n",
        " Max.   :2.000   Max.   :1996   Max.   :3.000   Max.   :125000  \n",
-       "                                                NA's   :488     \n",
-       "    TRTWHY1           TRTWHY2          TRTWHY3           TRTWHY4       \n",
-       " Min.   :-1.0000   Min.   :-1.000   Min.   :-1.0000   Min.   :-1.0000  \n",
-       " 1st Qu.:-1.0000   1st Qu.:-1.000   1st Qu.:-1.0000   1st Qu.:-1.0000  \n",
-       " Median : 2.0000   Median : 2.000   Median : 2.0000   Median : 2.0000  \n",
-       " Mean   : 0.9152   Mean   : 0.967   Mean   : 0.9369   Mean   : 0.8671  \n",
-       " 3rd Qu.: 2.0000   3rd Qu.: 2.000   3rd Qu.: 2.0000   3rd Qu.: 2.0000  \n",
-       " Max.   : 2.0000   Max.   : 2.000   Max.   : 2.0000   Max.   : 2.0000  \n",
-       " NA's   :8         NA's   :8        NA's   :8         NA's   :8        "
+       "    TRTWHY1         TRTWHY2         TRTWHY3         TRTWHY4     \n",
+       " Min.   :1.000   Min.   :1.000   Min.   :1.000   Min.   :1.000  \n",
+       " 1st Qu.:2.000   1st Qu.:2.000   1st Qu.:2.000   1st Qu.:2.000  \n",
+       " Median :2.000   Median :2.000   Median :2.000   Median :2.000  \n",
+       " Mean   :1.903   Mean   :1.928   Mean   :1.924   Mean   :1.851  \n",
+       " 3rd Qu.:2.000   3rd Qu.:2.000   3rd Qu.:2.000   3rd Qu.:2.000  \n",
+       " Max.   :2.000   Max.   :2.000   Max.   :2.000   Max.   :2.000  "
       ]
      },
      "metadata": {},
@@ -601,6 +718,22 @@
    ],
    "source": [
     "summary(fin)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 작업 공간 저장"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "save.image(file = \"C:/Users/eunee/khu_project_2019/data_cleaning.RData\")"
    ]
   }
  ],
