변수 클리닝

--- a/data_cleaning.ipynb
+++ b/data_cleaning.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [
     {
@@ -41,18 +41,15 @@
      "output_type": "stream",
      "text": [
       "Warning message:\n",
+      "\"unable to access index for repository https://mran.microsoft.com/snapshot/2018-08-01/src/contrib:\n",
+      "  URL 'https://mran.microsoft.com/snapshot/2018-08-01/src/contrib/PACKAGES'를 열 수 없습니다\"Warning message:\n",
+      "\"unable to access index for repository http://www.stats.ox.ac.uk/pub/RWin/src/contrib:\n",
+      "  URL 'http://www.stats.ox.ac.uk/pub/RWin/src/contrib/PACKAGES'를 열 수 없습니다\"Warning message:\n",
+      "\"package 'foreign' is not available (for R version 3.5.1)\"Warning message:\n",
+      "\"unable to access index for repository https://mran.microsoft.com/snapshot/2018-08-01/bin/windows/contrib/3.5:\n",
+      "  URL 'https://mran.microsoft.com/snapshot/2018-08-01/bin/windows/contrib/3.5/PACKAGES'를 열 수 없습니다\"Warning message:\n",
       "\"unable to access index for repository http://www.stats.ox.ac.uk/pub/RWin/bin/windows/contrib/3.5:\n",
       "  URL 'http://www.stats.ox.ac.uk/pub/RWin/bin/windows/contrib/3.5/PACKAGES'를 열 수 없습니다\""
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "package 'foreign' successfully unpacked and MD5 sums checked\n",
-      "\n",
-      "The downloaded binary packages are in\n",
-      "\tC:\\Users\\eunee\\AppData\\Local\\Temp\\Rtmp2RlVQ7\\downloaded_packages\n"
      ]
     }
    ],
@@ -70,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [
     {
@@ -111,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,11 +124,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [],
    "source": [
-    "kor <- subset(kor_2011, select = c(\"SEX\", \"AGE\", \"MARITAL\", \"RINCOME\", \"RXTINCM\", \"TRTWHY1\", \"TRTWHY2\", \"TRTWHY3\", \"TRTWHY4\"))"
+    "kor <- subset(kor_2011, select = c(\"SEX\", \"AGE\", \"MARITAL\", \"RINCOME\", \"TRTWHY1\", \"TRTWHY2\", \"TRTWHY3\", \"TRTWHY4\"))"
    ]
   },
   {
@@ -146,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,20 +162,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [],
    "source": [
-    "kor <- subset(kor, select= c(\"SEX\", \"AGE\", \"martial\", \"RINCOME\", \"RXTINCM\", \"TRTWHY1\", \"TRTWHY2\", \"TRTWHY3\", \"TRTWHY4\"))"
+    "kor <- subset(kor, select= c(\"SEX\", \"AGE\", \"martial\", \"RINCOME\", \"TRTWHY1\", \"TRTWHY2\", \"TRTWHY3\", \"TRTWHY4\"))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [],
    "source": [
-    "names(kor)[3] <- \"MARTIAL\""
+    "names(kor)[3] <- \"MARTIAL\"\n",
+    "names(kor)[4] <- \"INCOME\""
    ]
   },
   {
@@ -190,15 +188,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [],
    "source": [
-    "kor$RINCOME <- ifelse(kor$RINCOME==-8, NA, kor$RINCOME)\n",
-    "kor$RINCOME <- ifelse(kor$RINCOME==-1, NA, kor$RINCOME)\n",
-    "\n",
-    "kor$RXTINCM <- ifelse(kor$RXTINCM==-8, NA, kor$RXTINCM)\n",
-    "kor$RXTINCM <- ifelse(kor$RXTINCM==-1, NA, kor$RXTINCM)\n",
+    "kor$INCOME <- ifelse(kor$INCOME==-8, NA, kor$INCOME)\n",
+    "kor$INCOME <- ifelse(kor$INCOME==-1, NA, kor$INCOME)\n",
     "\n",
     "kor$TRTWHY1 <- ifelse(kor$TRTWHY1==-1, NA, kor$TRTWHY1)\n",
     "kor$TRTWHY2 <- ifelse(kor$TRTWHY2==-1, NA, kor$TRTWHY2)\n",
@@ -210,12 +205,48 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "```SEX```의 값을 0과 1로 코딩한다. 남성에 0, 여성에 1을 부여한다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 135,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "kor$SEX <- ifelse(kor$SEX == 1, 0, kor$SEX)\n",
+    "kor$SEX <- ifelse(kor$SEX == 2, 1, kor$SEX)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```TRTWHY```의 값을 0과 1로 코딩하는데, 특정 사건을 '겪는' 경우를 1로 처리한다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 136,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "kor$TRTWHY1 <- ifelse(kor$TRTWHY1 == 2, 0, kor$TRTWHY1)\n",
+    "kor$TRTWHY2 <- ifelse(kor$TRTWHY2 == 2, 0, kor$TRTWHY2)\n",
+    "kor$TRTWHY3 <- ifelse(kor$TRTWHY3 == 2, 0, kor$TRTWHY3)\n",
+    "kor$TRTWHY4 <- ifelse(kor$TRTWHY4 == 2, 0, kor$TRTWHY4)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "이제 ```kor```에 있는 ```NA```를 제거한다."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,26 +276,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       " SEX          AGE        MARTIAL    RINCOME          RXTINCM        TRTWHY1\n",
-       " 1:369   Min.   :19.00   1:515   Min.   : 0.000   Min.   : 0.0000   1: 22  \n",
-       " 2:302   1st Qu.:36.00   2: 60   1st Qu.: 3.000   1st Qu.: 0.0000   2:649  \n",
-       "         Median :44.00   3: 96   Median : 5.000   Median : 0.0000          \n",
-       "         Mean   :45.09           Mean   : 5.985   Mean   : 0.4054          \n",
-       "         3rd Qu.:52.50           3rd Qu.: 7.000   3rd Qu.: 0.0000          \n",
-       "         Max.   :81.00           Max.   :21.000   Max.   :11.0000          \n",
-       " TRTWHY2 TRTWHY3 TRTWHY4\n",
-       " 1:202   1: 52   1: 81  \n",
-       " 2:469   2:619   2:590  \n",
-       "                        \n",
-       "                        \n",
-       "                        \n",
-       "                        "
+       " SEX          AGE        MARTIAL     INCOME       TRTWHY1 TRTWHY2 TRTWHY3\n",
+       " 0:377   Min.   :19.00   1:526   Min.   : 0.000   0:663   0:478   0:630  \n",
+       " 1:308   1st Qu.:36.00   2: 60   1st Qu.: 3.000   1: 22   1:207   1: 55  \n",
+       "         Median :44.00   3: 99   Median : 5.000                          \n",
+       "         Mean   :45.01           Mean   : 5.999                          \n",
+       "         3rd Qu.:52.00           3rd Qu.: 7.000                          \n",
+       "         Max.   :81.00           Max.   :21.000                          \n",
+       " TRTWHY4\n",
+       " 0:604  \n",
+       " 1: 81  \n",
+       "        \n",
+       "        \n",
+       "        \n",
+       "        "
       ]
      },
      "metadata": {},
@@ -287,8 +318,8 @@
    "metadata": {},
    "source": [
     "- ```SEX``` : 성별\n",
-    "    - ```1``` : 남자\n",
-    "    - ```2``` : 여자\n",
+    "    - ```0``` : 남자\n",
+    "    - ```1``` : 여자\n",
     "\n",
     "    \n",
     "- ```AGE``` : 연령(만 나이)\n",
@@ -300,23 +331,7 @@
     "    - ```3``` : 미혼\n",
     "    \n",
     "    \n",
-    "- ```RINCOME``` : 월 평균 근로소득 (세전)\n",
-    "    - ```0``` : 소득 없음\n",
-    "    - ```1``` : 50만원 미만\n",
-    "    - ```2``` : 50만원 ~ 99만원\n",
-    "    - ```3``` : 100만원 ~ 149만원\n",
-    "    - ```4``` : 150만원 ~ 199만원\n",
-    "    - ```5``` : 200만원 ~ 249만원\n",
-    "    - ```6``` : 250만원 ~ 299만원\n",
-    "    - ```7``` : 300만원 ~ 349만원\n",
-    "    - ```8``` : 350만원 ~ 399만원\n",
-    "    - ```9``` : 400만원 ~ 449만원\n",
-    "    - ```10``` : 450만원 ~ 499만원\n",
-    "    - ```11``` : 500만원 이상\n",
-    "\n",
-    "    \n",
-    "    \n",
-    "- ```RXTINCM``` : 월 평균 근로외 소득 (세전)\n",
+    "- ```INCOME``` : 월 평균 근로소득 (세전)\n",
     "    - ```0``` : 소득 없음\n",
     "    - ```1``` : 50만원 미만\n",
     "    - ```2``` : 50만원 ~ 99만원\n",
@@ -334,20 +349,20 @@
     "    \n",
     "- 치료 못 받았던 경험  \n",
     "    ```TRTWHY1``` : 비용을 지불할 능력이 없어서\n",
+    "    - ```0``` : 없었다\n",
     "    - ```1``` : 있었다\n",
-    "    - ```2``` : 없었다\n",
     "    \n",
     " ```TRTWHY2``` : 직장을 빠지고 갈 시간이 없거나 다른 일로 바빠서  \n",
+    "    - ```0``` : 없었다\n",
     "    - ```1``` : 있었다\n",
-    "    - ```2``` : 없었다\n",
     "\n",
     " ```TRTWHY3``` : 거주하는 동네나 인근에서는 필요한 치료를 받을 수 없어서   \n",
+    "    - ```0``` : 없었다\n",
     "    - ```1``` : 있었다\n",
-    "    - ```2``` : 없었다\n",
     "  \n",
     " ```TRTWHY4``` : 치료를 기다리는 사람들이 너무 많아서   \n",
-    "    - ```1``` : 있었다\n",
-    "    - ```2``` : 없었다"
+    "    - ```0``` : 없었다\n",
+    "    - ```1``` : 있었다"
    ]
   },
   {
@@ -366,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -382,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -398,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -410,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -419,11 +434,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [],
    "source": [
     "names(fin) <- c(\"SEX\", \"AGE\", \"MARTIAL\", \"INCOME\", \"TRTWHY1\", \"TRTWHY2\", \"TRTWHY3\", \"TRTWHY4\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "남성을 0, 여성을 1로 코딩한다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 145,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fin$SEX <- ifelse(fin$SEX == 1, 0, fin$SEX)\n",
+    "fin$SEX <- ifelse(fin$SEX == 2, 1, fin$SEX)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```TRTWHY```에서 특정 사건을 '겪는' 경우를 1로 코딩한다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 146,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fin$TRTWHY1 <- ifelse(fin$TRTWHY1 == 2, 0, fin$TRTWHY1)\n",
+    "fin$TRTWHY2 <- ifelse(fin$TRTWHY2 == 2, 0, fin$TRTWHY2)\n",
+    "fin$TRTWHY3 <- ifelse(fin$TRTWHY3 == 2, 0, fin$TRTWHY3)\n",
+    "fin$TRTWHY4 <- ifelse(fin$TRTWHY4 == 2, 0, fin$TRTWHY4)"
    ]
   },
   {
@@ -435,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -451,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -465,22 +516,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        " SEX          AGE        MARTIAL     INCOME       TRTWHY1 TRTWHY2 TRTWHY3\n",
-       " 1:245   Min.   :15.00   1:456   Min.   :    10   1: 51   1: 38   1: 40  \n",
-       " 2:280   1st Qu.:35.00   2: 13   1st Qu.:  3000   2:474   2:487   2:485  \n",
+       " 0:245   Min.   :15.00   1:456   Min.   :    10   0:474   0:487   0:485  \n",
+       " 1:280   1st Qu.:35.00   2: 13   1st Qu.:  3000   1: 51   1: 38   1: 40  \n",
        "         Median :48.00   3: 56   Median :  4500                          \n",
        "         Mean   :46.73           Mean   :  5902                          \n",
        "         3rd Qu.:60.00           3rd Qu.:  6000                          \n",
        "         Max.   :75.00           Max.   :125000                          \n",
        " TRTWHY4\n",
+       " 0:447  \n",
        " 1: 78  \n",
-       " 2:447  \n",
        "        \n",
        "        \n",
        "        \n",
@@ -504,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [
     {
@@ -531,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [
     {
@@ -552,22 +603,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 152,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        " SEX          AGE        MARTIAL     INCOME       TRTWHY1 TRTWHY2 TRTWHY3\n",
-       " 1:245   Min.   :15.00   1:456   Min.   : 2.303   1: 51   1: 38   1: 40  \n",
-       " 2:280   1st Qu.:35.00   2: 13   1st Qu.: 8.006   2:474   2:487   2:485  \n",
+       " 0:245   Min.   :15.00   1:456   Min.   : 2.303   0:474   0:487   0:485  \n",
+       " 1:280   1st Qu.:35.00   2: 13   1st Qu.: 8.006   1: 51   1: 38   1: 40  \n",
        "         Median :48.00   3: 56   Median : 8.412                          \n",
        "         Mean   :46.73           Mean   : 8.386                          \n",
        "         3rd Qu.:60.00           3rd Qu.: 8.700                          \n",
        "         Max.   :75.00           Max.   :11.736                          \n",
        " TRTWHY4\n",
+       " 0:447  \n",
        " 1: 78  \n",
-       " 2:447  \n",
        "        \n",
        "        \n",
        "        \n",
@@ -587,8 +638,8 @@
    "metadata": {},
    "source": [
     "- ```SEX``` : 성별\n",
-    "    - ```1``` : 남자\n",
-    "    - ```2``` : 여자\n",
+    "    - ```0``` : 남자\n",
+    "    - ```1``` : 여자\n",
     "\n",
     "    \n",
     "- ```AGE``` : 출생년도\n",
@@ -605,20 +656,20 @@
     "    \n",
     "- 치료 못 받았던 경험  \n",
     "    ```TRTWHY1``` : 비용을 지불할 능력이 없어서\n",
+    "    - ```0``` : 없었다\n",
     "    - ```1``` : 있었다\n",
-    "    - ```2``` : 없었다\n",
     "    \n",
     " ```TRTWHY2``` : 직장을 빠지고 갈 시간이 없거나 다른 일로 바빠서  \n",
+    "    - ```0``` : 없었다\n",
     "    - ```1``` : 있었다\n",
-    "    - ```2``` : 없었다\n",
     "\n",
     " ```TRTWHY3``` : 거주하는 동네나 인근에서는 필요한 치료를 받을 수 없어서   \n",
+    "    - ```0``` : 없었다\n",
     "    - ```1``` : 있었다\n",
-    "    - ```2``` : 없었다\n",
     "  \n",
     " ```TRTWHY4``` : 치료를 기다리는 사람들이 너무 많아서   \n",
-    "    - ```1``` : 있었다\n",
-    "    - ```2``` : 없었다"
+    "    - ```0``` : 없었다\n",
+    "    - ```1``` : 있었다"
    ]
   },
   {
@@ -630,7 +681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 153,
    "metadata": {},
    "outputs": [],
    "source": [
