범주형 변수 수정

--- a/data_cleaning.ipynb
+++ b/data_cleaning.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
@@ -42,17 +42,8 @@
      "text": [
       "Warning message:\n",
       "\"unable to access index for repository http://www.stats.ox.ac.uk/pub/RWin/bin/windows/contrib/3.5:\n",
-      "  URL 'http://www.stats.ox.ac.uk/pub/RWin/bin/windows/contrib/3.5/PACKAGES'를 열 수 없습니다\""
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "package 'foreign' successfully unpacked and MD5 sums checked\n",
-      "\n",
-      "The downloaded binary packages are in\n",
-      "\tC:\\Users\\eunee\\AppData\\Local\\Temp\\RtmpIlRpS5\\downloaded_packages\n"
+      "  URL 'http://www.stats.ox.ac.uk/pub/RWin/bin/windows/contrib/3.5/PACKAGES'를 열 수 없습니다\"Warning message:\n",
+      "\"package 'foreign' is in use and will not be installed\""
      ]
     }
    ],
@@ -70,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
@@ -111,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,12 +150,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [],
    "source": [
-    "kor$SEX <- ifelse(kor$SEX == 1, 0, kor$SEX)\n",
-    "kor$SEX <- ifelse(kor$SEX == 2, 1, kor$SEX)"
+    "kor$SEX <- ifelse(kor$SEX == 1, \"Male\", kor$SEX)\n",
+    "kor$SEX <- ifelse(kor$SEX == 2, \"Female\", kor$SEX)"
    ]
   },
   {
@@ -178,7 +169,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "동거에 ```1```, 비동거에 ```2```, 미혼에 ```3```의 새로운 값을 부여한다. \n",
+    "동거에 ```cohabit```, 비동거에 ```non-cohabit```, 미혼에 ```single```의 새로운 값을 부여한다. \n",
     "- 동거 : 기혼, 동거    \n",
     "- 비동거 : 사별, 이혼 별거    \n",
     "- 미혼"
@@ -186,14 +177,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [],
    "source": [
-    "kor$MARITAL <- ifelse(kor$MARITAL == 6, 1, kor$MARITAL)\n",
-    "kor$MARITAL <- ifelse(kor$MARITAL == 3, 2, kor$MARITAL)\n",
-    "kor$MARITAL <- ifelse(kor$MARITAL == 4, 2, kor$MARITAL)\n",
-    "kor$MARITAL <- ifelse(kor$MARITAL == 5, 3, kor$MARITAL)"
+    "kor$MARITAL <- ifelse(kor$MARITAL == 1, \"cohabit\", kor$MARITAL)\n",
+    "kor$MARITAL <- ifelse(kor$MARITAL == 2, \"non-cohabit\", kor$MARITAL)\n",
+    "kor$MARITAL <- ifelse(kor$MARITAL == 3, \"non-cohabit\", kor$MARITAL)\n",
+    "kor$MARITAL <- ifelse(kor$MARITAL == 4, \"non-cohabit\", kor$MARITAL)\n",
+    "kor$MARITAL <- ifelse(kor$MARITAL == 5, \"single\", kor$MARITAL)\n",
+    "kor$MARITAL <- ifelse(kor$MARITAL == 6, \"cohabit\", kor$MARITAL)"
    ]
   },
   {
@@ -212,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,14 +229,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [],
    "source": [
-    "kor$TRTWHY1 <- ifelse(kor$TRTWHY1 == 2, 0, kor$TRTWHY1)\n",
-    "kor$TRTWHY2 <- ifelse(kor$TRTWHY2 == 2, 0, kor$TRTWHY2)\n",
-    "kor$TRTWHY3 <- ifelse(kor$TRTWHY3 == 2, 0, kor$TRTWHY3)\n",
-    "kor$TRTWHY4 <- ifelse(kor$TRTWHY4 == 2, 0, kor$TRTWHY4)"
+    "kor$TRTWHY1 <- ifelse(kor$TRTWHY1 == 1, \"Y\", kor$TRTWHY1)\n",
+    "kor$TRTWHY2 <- ifelse(kor$TRTWHY2 == 1, \"Y\", kor$TRTWHY2)\n",
+    "kor$TRTWHY3 <- ifelse(kor$TRTWHY3 == 1, \"Y\", kor$TRTWHY3)\n",
+    "kor$TRTWHY4 <- ifelse(kor$TRTWHY4 == 1, \"Y\", kor$TRTWHY4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "kor$TRTWHY1 <- ifelse(kor$TRTWHY1 == 2, \"N\", kor$TRTWHY1)\n",
+    "kor$TRTWHY2 <- ifelse(kor$TRTWHY2 == 2, \"N\", kor$TRTWHY2)\n",
+    "kor$TRTWHY3 <- ifelse(kor$TRTWHY3 == 2, \"N\", kor$TRTWHY3)\n",
+    "kor$TRTWHY4 <- ifelse(kor$TRTWHY4 == 2, \"N\", kor$TRTWHY4)"
    ]
   },
   {
@@ -255,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -297,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -321,17 +326,17 @@
    "metadata": {},
    "source": [
     "- ```SEX``` : 성별\n",
-    "    - ```0``` : 남자\n",
-    "    - ```1``` : 여자\n",
+    "    - ```male``` : 남자\n",
+    "    - ```female``` : 여자\n",
     "\n",
     "    \n",
     "- ```AGE``` : 연령(만 나이)\n",
     "\n",
     "\n",
     "- ```MARITAL``` : 동거\n",
-    "    - ```1``` : 동거\n",
-    "    - ```2``` : 비동거\n",
-    "    - ```3``` : 미혼\n",
+    "    - ```cohabit``` : 동거\n",
+    "    - ```non-cohabit``` : 비동거\n",
+    "    - ```single``` : 미혼\n",
     "    \n",
     "    \n",
     "- ```INCOME``` : 월 평균 근로소득 (세전)\n",
@@ -352,44 +357,44 @@
     "    \n",
     "- 치료 못 받았던 경험  \n",
     "    ```TRTWHY1``` : 비용을 지불할 능력이 없어서\n",
-    "    - ```0``` : 없었다\n",
-    "    - ```1``` : 있었다\n",
+    "    - ```N``` : 없었다\n",
+    "    - ```Y``` : 있었다\n",
     "    \n",
     " ```TRTWHY2``` : 직장을 빠지고 갈 시간이 없거나 다른 일로 바빠서  \n",
-    "    - ```0``` : 없었다\n",
-    "    - ```1``` : 있었다\n",
+    "    - ```N``` : 없었다\n",
+    "    - ```Y``` : 있었다\n",
     "\n",
     " ```TRTWHY3``` : 거주하는 동네나 인근에서는 필요한 치료를 받을 수 없어서   \n",
-    "    - ```0``` : 없었다\n",
-    "    - ```1``` : 있었다\n",
+    "    - ```N``` : 없었다\n",
+    "    - ```Y``` : 있었다\n",
     "  \n",
     " ```TRTWHY4``` : 치료를 기다리는 사람들이 너무 많아서   \n",
-    "    - ```0``` : 없었다\n",
-    "    - ```1``` : 있었다"
+    "    - ```N``` : 없었다\n",
+    "    - ```Y``` : 있었다"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       " SEX          AGE        MARITAL     INCOME       TRTWHY1 TRTWHY2 TRTWHY3\n",
-       " 0:377   Min.   :19.00   1:526   Min.   : 0.000   0:663   0:478   0:630  \n",
-       " 1:308   1st Qu.:36.00   2: 60   1st Qu.: 3.000   1: 22   1:207   1: 55  \n",
-       "         Median :44.00   3: 99   Median : 5.000                          \n",
-       "         Mean   :45.01           Mean   : 5.999                          \n",
-       "         3rd Qu.:52.00           3rd Qu.: 7.000                          \n",
-       "         Max.   :81.00           Max.   :21.000                          \n",
-       " TRTWHY4\n",
-       " 0:604  \n",
-       " 1: 81  \n",
-       "        \n",
-       "        \n",
-       "        \n",
-       "        "
+       "     SEX           AGE               MARITAL        INCOME       TRTWHY1\n",
+       " Female:308   Min.   :19.00   cohabit    :526   Min.   : 0.000   N:663  \n",
+       " Male  :377   1st Qu.:36.00   non-cohabit: 60   1st Qu.: 3.000   Y: 22  \n",
+       "              Median :44.00   single     : 99   Median : 5.000          \n",
+       "              Mean   :45.01                     Mean   : 5.999          \n",
+       "              3rd Qu.:52.00                     3rd Qu.: 7.000          \n",
+       "              Max.   :81.00                     Max.   :21.000          \n",
+       " TRTWHY2 TRTWHY3 TRTWHY4\n",
+       " N:478   N:630   N:604  \n",
+       " Y:207   Y: 55   Y: 81  \n",
+       "                        \n",
+       "                        \n",
+       "                        \n",
+       "                        "
       ]
      },
      "metadata": {},
@@ -416,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -425,11 +430,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [],
    "source": [
-    "names(fin) <- c(\"SEX\", \"AGE\", \"MARTIAL\", \"INCOME\", \"TRTWHY1\", \"TRTWHY2\", \"TRTWHY3\", \"TRTWHY4\")"
+    "names(fin) <- c(\"SEX\", \"AGE\", \"MARITAL\", \"INCOME\", \"TRTWHY1\", \"TRTWHY2\", \"TRTWHY3\", \"TRTWHY4\")"
    ]
   },
   {
@@ -448,12 +453,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [],
    "source": [
-    "fin$SEX <- ifelse(fin$SEX == 1, 0, fin$SEX)\n",
-    "fin$SEX <- ifelse(fin$SEX == 2, 1, fin$SEX)"
+    "fin$SEX <- ifelse(fin$SEX == 1, \"male\", fin$SEX)\n",
+    "fin$SEX <- ifelse(fin$SEX == 2, \"female\", fin$SEX)"
    ]
   },
   {
@@ -472,11 +477,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [],
    "source": [
     "fin$AGE <- 2011-fin$AGE"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### ```MARITAL```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "동거에 ```cohabit```, 비동거에 ```non-cohabit```, 미혼에 ```single```의 새로운 값을 부여한다. \n",
+    "- 동거 : 기혼, 동거    \n",
+    "- 비동거 : 사별, 이혼 별거    \n",
+    "- 미혼"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fin$MARITAL <- ifelse(fin$MARITAL == 1, \"cohabit\", fin$MARITAL)\n",
+    "fin$MARITAL <- ifelse(fin$MARITAL == 2, \"non-cohabit\", fin$MARITAL)\n",
+    "fin$MARITAL <- ifelse(fin$MARITAL == 3, \"non-cohabit\", fin$MARITAL)\n",
+    "fin$MARITAL <- ifelse(fin$MARITAL == 4, \"non-cohabit\", fin$MARITAL)\n",
+    "fin$MARITAL <- ifelse(fin$MARITAL == 5, \"single\", fin$MARITAL)\n",
+    "fin$MARITAL <- ifelse(fin$MARITAL == 6, \"cohabit\", fin$MARITAL)"
    ]
   },
   {
@@ -495,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [
     {
@@ -522,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -545,14 +581,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [],
    "source": [
-    "fin$TRTWHY1 <- ifelse(fin$TRTWHY1 == 2, 0, fin$TRTWHY1)\n",
-    "fin$TRTWHY2 <- ifelse(fin$TRTWHY2 == 2, 0, fin$TRTWHY2)\n",
-    "fin$TRTWHY3 <- ifelse(fin$TRTWHY3 == 2, 0, fin$TRTWHY3)\n",
-    "fin$TRTWHY4 <- ifelse(fin$TRTWHY4 == 2, 0, fin$TRTWHY4)"
+    "fin$TRTWHY1 <- ifelse(fin$TRTWHY1 == 1, \"Y\", fin$TRTWHY1)\n",
+    "fin$TRTWHY2 <- ifelse(fin$TRTWHY2 == 1, \"Y\", fin$TRTWHY2)\n",
+    "fin$TRTWHY3 <- ifelse(fin$TRTWHY3 == 1, \"Y\", fin$TRTWHY3)\n",
+    "fin$TRTWHY4 <- ifelse(fin$TRTWHY4 == 1, \"Y\", fin$TRTWHY4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 124,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fin$TRTWHY1 <- ifelse(fin$TRTWHY1 == 2, \"N\", fin$TRTWHY1)\n",
+    "fin$TRTWHY2 <- ifelse(fin$TRTWHY2 == 2, \"N\", fin$TRTWHY2)\n",
+    "fin$TRTWHY3 <- ifelse(fin$TRTWHY3 == 2, \"N\", fin$TRTWHY3)\n",
+    "fin$TRTWHY4 <- ifelse(fin$TRTWHY4 == 2, \"N\", fin$TRTWHY4)"
    ]
   },
   {
@@ -564,7 +612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -583,7 +631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -599,12 +647,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [],
    "source": [
     "fin$SEX <- factor(fin$SEX)\n",
-    "fin$MARTIAL <- factor(fin$MARTIAL)\n",
+    "fin$MARITAL <- factor(fin$MARITAL)\n",
     "fin$TRTWHY1 <- factor(fin$TRTWHY1)\n",
     "fin$TRTWHY2 <- factor(fin$TRTWHY2)\n",
     "fin$TRTWHY3 <- factor(fin$TRTWHY3)\n",
@@ -616,17 +664,17 @@
    "metadata": {},
    "source": [
     "- ```SEX``` : 성별\n",
-    "    - ```0``` : 남자\n",
-    "    - ```1``` : 여자\n",
+    "    - ```male``` : 남자\n",
+    "    - ```female``` : 여자\n",
     "\n",
     "    \n",
     "- ```AGE``` : 출생년도\n",
     "\n",
     "\n",
     "- ```MARTIAL``` : 동거\n",
-    "    - ```1``` : 동거\n",
-    "    - ```2``` : 비동거\n",
-    "    - ```3``` : 해당 없음(미혼)\n",
+    "    - ```cohabit``` : 동거\n",
+    "    - ```non-cohabit``` : 비동거\n",
+    "    - ```single``` : 해당 없음(미혼)\n",
     "    \n",
     "    \n",
     "- ```INCOME``` : 로그를 취한 월 평균 총 소득 (세전, 근로외 소득 포함)\n",
@@ -634,44 +682,44 @@
     "    \n",
     "- 치료 못 받았던 경험  \n",
     "    ```TRTWHY1``` : 비용을 지불할 능력이 없어서\n",
-    "    - ```0``` : 없었다\n",
-    "    - ```1``` : 있었다\n",
+    "    - ```N``` : 없었다\n",
+    "    - ```Y``` : 있었다\n",
     "    \n",
     " ```TRTWHY2``` : 직장을 빠지고 갈 시간이 없거나 다른 일로 바빠서  \n",
-    "    - ```0``` : 없었다\n",
-    "    - ```1``` : 있었다\n",
+    "    - ```N``` : 없었다\n",
+    "    - ```Y``` : 있었다\n",
     "\n",
     " ```TRTWHY3``` : 거주하는 동네나 인근에서는 필요한 치료를 받을 수 없어서   \n",
-    "    - ```0``` : 없었다\n",
-    "    - ```1``` : 있었다\n",
+    "    - ```N``` : 없었다\n",
+    "    - ```Y``` : 있었다\n",
     "  \n",
     " ```TRTWHY4``` : 치료를 기다리는 사람들이 너무 많아서   \n",
-    "    - ```0``` : 없었다\n",
-    "    - ```1``` : 있었다"
+    "    - ```N``` : 없었다\n",
+    "    - ```Y``` : 있었다"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       " SEX          AGE        MARTIAL     INCOME      TRTWHY1 TRTWHY2 TRTWHY3\n",
-       " 0:245   Min.   :15.00   1:456   Min.   :0.834   0:474   0:487   0:485  \n",
-       " 1:280   1st Qu.:35.00   2: 13   1st Qu.:2.080   1: 51   1: 38   1: 40  \n",
-       "         Median :48.00   3: 56   Median :2.130                          \n",
-       "         Mean   :46.73           Mean   :2.123                          \n",
-       "         3rd Qu.:60.00           3rd Qu.:2.163                          \n",
-       "         Max.   :75.00           Max.   :2.463                          \n",
-       " TRTWHY4\n",
-       " 0:447  \n",
-       " 1: 78  \n",
-       "        \n",
-       "        \n",
-       "        \n",
-       "        "
+       "     SEX           AGE               MARITAL        INCOME       TRTWHY1\n",
+       " female:280   Min.   :15.00   cohabit    :456   Min.   : 2.303   N:474  \n",
+       " male  :245   1st Qu.:35.00   non-cohabit: 69   1st Qu.: 8.006   Y: 51  \n",
+       "              Median :48.00                     Median : 8.412          \n",
+       "              Mean   :46.73                     Mean   : 8.386          \n",
+       "              3rd Qu.:60.00                     3rd Qu.: 8.700          \n",
+       "              Max.   :75.00                     Max.   :11.736          \n",
+       " TRTWHY2 TRTWHY3 TRTWHY4\n",
+       " N:487   N:485   N:447  \n",
+       " Y: 38   Y: 40   Y: 78  \n",
+       "                        \n",
+       "                        \n",
+       "                        \n",
+       "                        "
       ]
      },
      "metadata": {},
@@ -691,7 +739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [],
    "source": [
