범주형 변수명 수정

--- a/data_cleaning.ipynb
+++ b/data_cleaning.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [
     {
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,12 +150,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [],
    "source": [
-    "kor$SEX <- ifelse(kor$SEX == 1, \"Male\", kor$SEX)\n",
-    "kor$SEX <- ifelse(kor$SEX == 2, \"Female\", kor$SEX)"
+    "kor$SEX <- ifelse(kor$SEX == 1, \"male\", kor$SEX)\n",
+    "kor$SEX <- ifelse(kor$SEX == 2, \"female\", kor$SEX)"
    ]
   },
   {
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -302,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -375,15 +375,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "     SEX           AGE               MARITAL        INCOME       TRTWHY1\n",
-       " Female:308   Min.   :19.00   cohabit    :526   Min.   : 0.000   N:663  \n",
-       " Male  :377   1st Qu.:36.00   non-cohabit: 60   1st Qu.: 3.000   Y: 22  \n",
+       " female:308   Min.   :19.00   cohabit    :526   Min.   : 0.000   N:663  \n",
+       " male  :377   1st Qu.:36.00   non-cohabit: 60   1st Qu.: 3.000   Y: 22  \n",
        "              Median :44.00   single     : 99   Median : 5.000          \n",
        "              Mean   :45.01                     Mean   : 5.999          \n",
        "              3rd Qu.:52.00                     3rd Qu.: 7.000          \n",
@@ -421,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -430,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -453,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -477,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -503,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -531,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [
     {
@@ -558,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -581,7 +581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 152,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -593,7 +593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 153,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -612,7 +612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 154,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -631,7 +631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 155,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -647,7 +647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 156,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -700,7 +700,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 157,
    "metadata": {},
    "outputs": [
     {
@@ -739,7 +739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 158,
    "metadata": {},
    "outputs": [],
    "source": [
